{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 48,
  "lineage": "633c9440-33cf-2078-7415-b9bde2804683",
  "resources": [
    {
      "module": "module.cf-ecs-s3",
      "mode": "managed",
      "type": "aws_alb",
      "name": "my_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:821594384510:loadbalancer/app/demo-app-lb/0bcfe0ad6ede0410",
            "arn_suffix": "app/demo-app-lb/0bcfe0ad6ede0410",
            "desync_mitigation_mode": "defensive",
            "dns_name": "demo-app-lb-881907063.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:821594384510:loadbalancer/app/demo-app-lb/0bcfe0ad6ede0410",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "demo-app-lb",
            "security_groups": [
              "sg-035f04b0440db24b8",
              "sg-040fa006f1419cd8a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01e218622ee7d78a7"
              },
              {
                "subnet_id": "subnet-0834eded2096be2dc"
              }
            ],
            "subnets": [
              "subnet-01e218622ee7d78a7",
              "subnet-0834eded2096be2dc"
            ],
            "vpc_id": "vpc-0a8c8210821c456b3",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.cf-ecs-s3.aws_internet_gateway.igw",
            "module.cf-ecs-s3.aws_security_group.egress_all",
            "module.cf-ecs-s3.aws_security_group.http",
            "module.cf-ecs-s3.aws_subnet.public_a",
            "module.cf-ecs-s3.aws_subnet.public_b",
            "module.cf-ecs-s3.aws_vpc.api_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cf-ecs-s3",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "my_api_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:821594384510:listener/app/demo-app-lb/0bcfe0ad6ede0410/61e412bf7e5af8fd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:821594384510:targetgroup/demo-app-tg/dcf2cf0cb6cc734e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:821594384510:listener/app/demo-app-lb/0bcfe0ad6ede0410/61e412bf7e5af8fd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:821594384510:loadbalancer/app/demo-app-lb/0bcfe0ad6ede0410",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cf-ecs-s3.aws_alb.my_api",
            "module.cf-ecs-s3.aws_internet_gateway.igw",
            "module.cf-ecs-s3.aws_lb_target_group.my_api",
            "module.cf-ecs-s3.aws_security_group.egress_all",
            "module.cf-ecs-s3.aws_security_group.http",
            "module.cf-ecs-s3.aws_subnet.public_a",
            "module.cf-ecs-s3.aws_subnet.public_b",
            "module.cf-ecs-s3.aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.cf-ecs-s3",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0688303d4096f6859",
            "association_id": "eipassoc-05157ab7d76ca2c96",
            "domain": "vpc",
            "id": "eipalloc-0688303d4096f6859",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0378e1bf0e28692c5",
            "private_dns": "ip-10-0-1-47.ec2.internal",
            "private_ip": "10.0.1.47",
            "public_dns": "ec2-3-220-117-111.compute-1.amazonaws.com",
            "public_ip": "3.220.117.111",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.cf-ecs-s3",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821594384510:internet-gateway/igw-01bed3cb7dcaa113c",
            "id": "igw-01bed3cb7dcaa113c",
            "owner_id": "821594384510",
            "vpc_id": "vpc-0a8c8210821c456b3"
          },
          "dependencies": [
            "module.cf-ecs-s3.aws_vpc.api_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cf-ecs-s3",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:821594384510:targetgroup/demo-app-tg/dcf2cf0cb6cc734e",
            "arn_suffix": "targetgroup/demo-app-tg/dcf2cf0cb6cc734e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/v1/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:821594384510:targetgroup/demo-app-tg/dcf2cf0cb6cc734e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "demo-app-tg",
            "port": 5011,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a8c8210821c456b3"
          },
          "dependencies": [
            "module.cf-ecs-s3.aws_alb.my_api",
            "module.cf-ecs-s3.aws_internet_gateway.igw",
            "module.cf-ecs-s3.aws_security_group.egress_all",
            "module.cf-ecs-s3.aws_security_group.http",
            "module.cf-ecs-s3.aws_subnet.public_a",
            "module.cf-ecs-s3.aws_subnet.public_b",
            "module.cf-ecs-s3.aws_vpc.api_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cf-ecs-s3",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0688303d4096f6859",
            "connectivity_type": "public",
            "id": "nat-0cff3d1e9494e6f68",
            "network_interface_id": "eni-0378e1bf0e28692c5",
            "private_ip": "10.0.1.47",
            "public_ip": "3.220.117.111",
            "subnet_id": "subnet-01e218622ee7d78a7"
          },
          "dependencies": [
            "module.cf-ecs-s3.aws_eip.nat",
            "module.cf-ecs-s3.aws_internet_gateway.igw",
            "module.cf-ecs-s3.aws_subnet.public_a",
            "module.cf-ecs-s3.aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.cf-ecs-s3",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-064ac24de60bced2a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cff3d1e9494e6f68",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-064ac24de60bced2a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cf-ecs-s3.aws_eip.nat",
            "module.cf-ecs-s3.aws_internet_gateway.igw",
            "module.cf-ecs-s3.aws_nat_gateway.ngw",
            "module.cf-ecs-s3.aws_route_table.private",
            "module.cf-ecs-s3.aws_subnet.public_a",
            "module.cf-ecs-s3.aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.cf-ecs-s3",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01bed3cb7dcaa113c",
            "id": "r-rtb-0d0b0b310872548c41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d0b0b310872548c4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cf-ecs-s3.aws_internet_gateway.igw",
            "module.cf-ecs-s3.aws_route_table.public",
            "module.cf-ecs-s3.aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.cf-ecs-s3",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821594384510:route-table/rtb-064ac24de60bced2a",
            "id": "rtb-064ac24de60bced2a",
            "owner_id": "821594384510",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cff3d1e9494e6f68",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8c8210821c456b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cf-ecs-s3.aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.cf-ecs-s3",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821594384510:route-table/rtb-0d0b0b310872548c4",
            "id": "rtb-0d0b0b310872548c4",
            "owner_id": "821594384510",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01bed3cb7dcaa113c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8c8210821c456b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cf-ecs-s3.aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.cf-ecs-s3",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4e1c09dc675be4e",
            "route_table_id": "rtb-064ac24de60bced2a",
            "subnet_id": "subnet-08f1ce57c610c3fd3"
          },
          "dependencies": [
            "module.cf-ecs-s3.aws_route_table.private",
            "module.cf-ecs-s3.aws_subnet.private_a",
            "module.cf-ecs-s3.aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.cf-ecs-s3",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0753512bdbe188e93",
            "route_table_id": "rtb-0d0b0b310872548c4",
            "subnet_id": "subnet-01e218622ee7d78a7"
          },
          "dependencies": [
            "module.cf-ecs-s3.aws_route_table.public",
            "module.cf-ecs-s3.aws_subnet.public_a",
            "module.cf-ecs-s3.aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.cf-ecs-s3",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821594384510:security-group/sg-035f04b0440db24b8",
            "description": "Allow all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035f04b0440db24b8",
            "ingress": [],
            "name": "egress-all",
            "name_prefix": "",
            "owner_id": "821594384510",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a8c8210821c456b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cf-ecs-s3.aws_vpc.api_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cf-ecs-s3",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821594384510:security-group/sg-040fa006f1419cd8a",
            "description": "HTTP traffic",
            "egress": [],
            "id": "sg-040fa006f1419cd8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http",
            "name_prefix": "",
            "owner_id": "821594384510",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a8c8210821c456b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cf-ecs-s3.aws_vpc.api_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cf-ecs-s3",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821594384510:security-group/sg-0f79655219fe098db",
            "description": "HTTPS traffic",
            "egress": [],
            "id": "sg-0f79655219fe098db",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "https",
            "name_prefix": "",
            "owner_id": "821594384510",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a8c8210821c456b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cf-ecs-s3.aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.cf-ecs-s3",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821594384510:security-group/sg-02952818a151ee092",
            "description": "Allow ingress to API",
            "egress": [],
            "id": "sg-02952818a151ee092",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5011,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5011
              }
            ],
            "name": "ingress-api",
            "name_prefix": "",
            "owner_id": "821594384510",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a8c8210821c456b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cf-ecs-s3.aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.cf-ecs-s3",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821594384510:subnet/subnet-08f1ce57c610c3fd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f1ce57c610c3fd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "821594384510",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private | us-east-1a"
            },
            "tags_all": {
              "Name": "private | us-east-1a"
            },
            "vpc_id": "vpc-0a8c8210821c456b3"
          },
          "dependencies": [
            "module.cf-ecs-s3.aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.cf-ecs-s3",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821594384510:subnet/subnet-039fe146bfc10fe36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039fe146bfc10fe36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "821594384510",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private | us-east-1b"
            },
            "tags_all": {
              "Name": "private | us-east-1b"
            },
            "vpc_id": "vpc-0a8c8210821c456b3"
          },
          "dependencies": [
            "module.cf-ecs-s3.aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.cf-ecs-s3",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821594384510:subnet/subnet-01e218622ee7d78a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e218622ee7d78a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "821594384510",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public | us-east-1a"
            },
            "tags_all": {
              "Name": "public | us-east-1a"
            },
            "vpc_id": "vpc-0a8c8210821c456b3"
          },
          "dependencies": [
            "module.cf-ecs-s3.aws_vpc.api_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cf-ecs-s3",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821594384510:subnet/subnet-0834eded2096be2dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0834eded2096be2dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "821594384510",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public | us-east-1b"
            },
            "tags_all": {
              "Name": "public | us-east-1b"
            },
            "vpc_id": "vpc-0a8c8210821c456b3"
          },
          "dependencies": [
            "module.cf-ecs-s3.aws_vpc.api_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cf-ecs-s3",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "api_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821594384510:vpc/vpc-0a8c8210821c456b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0be8f0dbf376847a6",
            "default_route_table_id": "rtb-05ad8a1d5d5849647",
            "default_security_group_id": "sg-03738585ac14c9f83",
            "dhcp_options_id": "dopt-009cfc5c7ceadb707",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a8c8210821c456b3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05ad8a1d5d5849647",
            "owner_id": "821594384510",
            "tags": {
              "Name": "demo_api_vpc"
            },
            "tags_all": {
              "Name": "demo_api_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}